header and hero section

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="//db.onlinewebfonts.com/c/6ff35b8857ed1d3bf6a3cc93164ff962?family=Touche" rel="stylesheet" type="text/css"/>
+  <link href="//db.onlinewebfonts.com/c/89d8fba73b6d10c300478fad02d4871d?family=Touche" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <app-root></app-root>
